# realtime-asr

./: README.md  main.py  pyproject.toml
src/: __init__.py  asr.py  audio.py  config.py  llm.py  main.py  queues.py  ui.py  utils.py  utterance.py  workers.py
src/app/: __init__.py  gradio_ui.py  llm.py  pipeline.py
src/core/: __init__.py  asr.py  config.py  runtime_config.py  vad.py
src/interfaces/: __init__.py  microphone.py
